style fixes, demo characters cropped, fadein css animation

--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,9 @@ body {
   flex-direction: column;
 }
 
-.game-flex-container{
+.game-flex-container {
   display: flex;
-  align-items:flex-start safe;
+  align-items: flex-start safe;
   height: 100vh;
   width: 100vw;
   max-width: 1080px;
@@ -25,172 +25,76 @@ body {
   justify-content: flex-start safe;
   flex-direction: column;
   z-index: 0;
-  background-image:url("images/backgrounds/KoulunPiha.png");
+  background-image: url("images/backgrounds/KoulunPiha.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 
-.top-options-menu{
-  background-image:url("images/UI/MenuIcon.png");
+.top-options-menu {
+  background-image: url("images/UI/MenuIcon.png");
   align-self: flex-end;
   padding: 3%;
+  margin: 1%;
   z-index: 11;
   background-repeat: no-repeat;
-  background-size: 100%;
-  /* position: relative; it doesn't work */
- 
+  background-size: contain;
 }
 
-#game-buttons {
-  /*position: absolute;*/
-  top: 0;
-  left: 0;
-  z-index: 13;
-  background-color: white;
-  padding: 10px;
-  border: 1px solid black;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.9); /* Semi-transparent black overlay */
-  display: flex; 
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-#game-buttons button {
-  margin: 0 10px;
-  display: block;
-  position: relative;
-}
-
-#game-buttons.active {
-  display: block;
-}
-
-
-.startbutton {
+.pausemenubutton {
   background-color: #FFF8EE;
   border-radius: 11px;
-  border: 2px solid #000; 
+  border: 2px solid #000;
+  width: 350px;
+  /* Tätä leveysasiaa pitää vielä miettiä */
   color: #000;
-  padding: 12px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); 
+  padding: 25px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   font-family: JetBrains Mono;
   font-size: 1.8rem;
   font-style: normal;
   font-weight: 400;
-  line-height: normal; 
-  text-transform: uppercase;
+  line-height: normal;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  text-align: left;
+  gap: 17px;
 }
 
-.starticon {
-    position: relative;
-    display: block;
-    height: 65px;
-    width: 80px;
-  margin-right: -8px;
-  }
-
-  .pausemenubutton {
-    background-color: #FFF8EE;
-    border-radius: 11px;
-    border: 2px solid #000; 
-    width: 350px; /* Tätä leveysasiaa pitää vielä miettiä */
-    color: #000;
-    padding: 25px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); 
-    font-family: JetBrains Mono;
-    font-size: 1.8rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal; 
-    display: flex;
-    align-items: center;
-    gap: 17px;
-  }
-  
-  .backicon {
-      position: relative;
-      display: block;
-      height: 55px;
-      width: 55px;
-    flex-shrink: 0;
-  }
-  
-  .homeicon {
-      position: relative;
-      display: block;
-      height: 55px;
-      width: 55px;
-    flex-shrink: 0;
-    }
-  
-.top-text-container{
-   display: flex;
-   flex-direction: column;
-   width: 100%;
-   z-index: 10;
-   align-items: center;
-   top: 50px;
-} 
-
-/* Animation */
- @keyframes fadeIn {
-  from {
-    opacity: 0;
-  } to {
-    opacity: 1;
-  }
- }
-
- .speechBubbleLeft {
-  opacity: 0;
+.backicon {
+  position: relative;
+  display: block;
+  height: 55px;
+  width: 55px;
+  flex-shrink: 0;
 }
 
- .speechBubbleLeft {
-  animation-name: fadeIn;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-}
-
-.speechBubbleRight {
-  opacity: 0;
-}
-
- .speechBubbleRight {
-  animation-name: fadeIn;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
+.homeicon {
+  position: relative;
+  display: block;
+  height: 55px;
+  width: 55px;
+  flex-shrink: 0;
 }
 
 .top-text-container {
-  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  z-index: 10;
+  align-items: center;
+  top: 50px;
 }
 
-.top-text-container {
-  animation-name: fadeIn;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
-}
-
-
-.character-container{
+.character-container {
   position: absolute;
   /* copypaste from main game container*/
-  height: 100vh;
+  height: 80vh;
   width: 100vw;
   max-width: 1080px;
   max-height: 1920px;
+  bottom: 0;
   padding-bottom: 2vh;
+  padding-top: 12vh;
   display: flex;
   flex-shrink: 3;
   justify-content: flex-end safe;
@@ -198,12 +102,12 @@ body {
   flex-direction: row;
 }
 
-.character{
-  aspect-ratio: 1/1;
+.character {
+  /*aspect-ratio: 1/1;*/
   padding-bottom: 10vh;
-  max-width: 500px;
-  flex-shrink: 1;
-  background-image:url("images/characters/HahmoSofi.png");
+  /*max-width: 500px;*/
+  flex: 1 1 0px;
+  background-image: url("images/characters/HahmoSofi.png");
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: contain;
@@ -211,7 +115,7 @@ body {
 }
 
 
-.bottom-choice-container{
+.bottom-choice-container {
   margin-top: auto;
   display: flex;
   flex-direction: column;
@@ -222,28 +126,7 @@ body {
   padding-bottom: 3vh;
 }
 
-.choiceBox {
-  position: relative;
-  left: -100%; /* Initial position off-screen to the left */
-  opacity: 0; /* Initially set opacity to 0 to make it invisible */
-  visibility: hidden; /* Initially set visibility to hidden */
-  animation: slideFromLeft 3s forwards; /* Apply the animation with a duration of 2 seconds */
-}
-
-@keyframes slideFromLeft {
-  from {
-    left: -100%; /* Initial position off-screen to the left */
-    opacity: 0; /* Initial opacity set to 0 */
-    visibility: hidden; /* Initial visibility set to hidden */
-  }
-  to {
-    left: 0; /* Move the element to its intended position */
-    opacity: 1; /* Set opacity to 1 to make it visible */
-    visibility: visible; /* Set visibility to visible */
-  }
-}
-
-.startpage-container{
+.startpage-container {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -255,26 +138,26 @@ body {
   padding-bottom: 3vh;
 }
 
-.startpagecharacter-container{
-flex: 1;
+.startpagecharacter-container {
+  flex: 1;
 }
 
-.startpagecharacter{
+.startpagecharacter {
   max-height: 70vh;
   width: auto;
   z-index: 1;
 }
 
-.startmenubuttons{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 10px;
-    flex-grow: 1;
-    z-index: 10;
-} 
+.startmenubuttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+  flex-grow: 1;
+  z-index: 10;
+}
 
-.startpage-footer{
+.startpage-footer {
   margin-top: auto;
   display: flex;
   flex-direction: column;
@@ -285,6 +168,20 @@ flex: 1;
   padding-bottom: 3vh;
 }
 
+.fade-in-animation {
+  animation-name: fade-in;
+  animation-duration: 0.4s;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
 
 .hidden {
   display: none;
